# UCalgary_Archive

./: README.md
CPSC_231_F2018/: README.md
CPSC_231_F2018/assignment_1/: README.md  double_beepers.py  maze.py  p1.py  p2.py  p3.py  p4.py  p5.py  p6.py
CPSC_231_F2018/assignment_2/: HaohuShen_Big_Pig.py  HaohuShen_p1.py  HaohuShen_p2.py  HaohuShen_p3.py  HaohuShen_p4.py  HaohuShen_p5.py  HaohuShen_p6.py  HaohuShen_p7.py  HaohuShen_p8.py  HaohuShen_p9.py
CPSC_231_F2018/assignment_3/: HaohuShen_Guess_Your_TAs_Ratings.py  HaohuShen_p3.py  HaohuShen_p4.py
CPSC_231_F2018/assignment_4/: HaohuShen_Evil_Hangman.py  HaohuShen_Hangman_Game_v0.01.py  HaohuShen_p1.py  HaohuShen_p2.py  HaohuShen_p3.py  HaohuShen_p4.py  visual.py
CPSC_231_F2018/assignment_5/: HaohuShen_Computer_Tic_Tac_Toe_Player.py  HaohuShen_p1.py  HaohuShen_p2.py
CPSC_231_F2018/assignment_6/: HaohuShen_p1.py  HaohuShen_p2.py  HaohuShen_p3_Client.py  HaohuShen_p3_GuitarString.py  HaohuShen_p4.java  HaohuShen_p4.py
CPSC_233_W2019/: README.md
CPSC_233_W2019/Coding_Challenge1/: BasicJava5.java  BasicJava5Test.java
CPSC_233_W2019/Coding_Challenge1_practice/: BasicJavaP1.java  BasicJavaP1Test.java  BasicJavaP2.java  BasicJavaP2Test.java
CPSC_233_W2019/Coding_Challenge2/: Showroom.java  ShowroomTest.java  Vehicle.java  VehicleTest.java
CPSC_233_W2019/Coding_Challenge3/: AudioBook.java  AudioBookTest.java  Book.java  BookTest.java
CPSC_233_W2019/Coding_Challenge4/: Aircraft.java  AircraftTest.java  BomberAircraft.java  BomberAircraftTest.java  FighterAircraft.java  FighterAircraftTest.java
CPSC_233_W2019/Coding_Challenge5/: FileExercises.java  FileExercisesTest.java
CPSC_233_W2019/Coding_Challenge5_practice/: FileExercises.java  FileExercisesTest.java
CPSC_233_W2019/Coding_Challenge6/: RecursionExercises.java  RecursionExercisesTest.java
CPSC_233_W2019/Group25_Project/: .Group25_UML.pdf.icloud  Project_Proposal_20190412.md  README.md  SQLITE_TUTORIAL.docx  Team_Contract.docx  initGUIBased.sh  initTest.sh  initTextBased.sh
CPSC_233_W2019/Individual_Assignment10/: Vowels.java  VowelsTest.java
CPSC_233_W2019/Individual_Assignment2/: BankAccount.java  BankAccountIA2Test.java
CPSC_233_W2019/Individual_Assignment3/: BankAccount.java  Customer.java  CustomerIA3Test.java
CPSC_233_W2019/Individual_Assignment4/: SavingsAccount.java  SavingsAccountIA4Test.java
CPSC_233_W2019/Individual_Assignment5/: IA5.java
CPSC_233_W2019/Individual_Assignment6/: BankAccount.java  BankAccountIA6Test.java  Customer.java  FormatTester.java  SavingsAccount.java  SavingsAccountIA6Test.java
CPSC_233_W2019/Individual_Assignment7/: CreditHistoryTest.java
CPSC_233_W2019/Individual_Assignment8_9/: BankAccount.java  BankAccountTA8Test.java  Customer.java  CustomerTA8Test.java  SavingsAccount.java  SavingsAccountTA8Test.java
CPSC_233_W2019/Team_Assignment1/: GuessingGame.java  GuessingGameTest.java
CPSC_233_W2019/Team_Assignment10/: TA10.java
CPSC_233_W2019/Team_Assignment2/: Bank.java
CPSC_233_W2019/Team_Assignment3/: Bank.java
CPSC_233_W2019/Team_Assignment4/: BankAccountIA3Test.java  SavingsAccount.java  SavingsAccountTA4Test.java
CPSC_233_W2019/Team_Assignment5/: BankAccount.java  BankApp.java  Customer.java
CPSC_233_W2019/Team_Assignment6/: BankAccount.java  BankAccountTA6Test.java  ChequingAccount.java  ChequingAccountTA6Test.java  Customer.java  SavingsAccount.java  SavingsAccountTA6Test.java
CPSC_233_W2019/Team_Assignment7/: CreditHistoryTest.java
CPSC_233_W2019/Team_Assignment8_9/: BankAccount.java  BankApp.java  Customer.java  SavingsAccount.java
CPSC_313_W2020/: README.md
CPSC_331_S2019/: README.md
CPSC_331_S2019/Assignment1/: FGrindelwald.java  SGrindelwald.java  test_fGrin.java  test_sGrin.java
CPSC_331_S2019/Assignment2/: .Assignment2.pdf.icloud  TwoThreeTest1.java  TwoThreeTest2.java  TwoThreeTree.java  TwoThreeUtilities.java
CPSC_331_S2019/Assignment3/: ArrayUtils.java  TestSort.java
CPSC_331_S2019/Others/: Binary_Search.cpp  Binary_Search_Tree.cpp  Demo_of_sorting_algo.cpp  QuickSort.cpp  demo_of_sorting.cpp
CPSC_355_S2019/: README.md
CPSC_355_S2019/Assignment1/: assign1a.s  assign1b.asm  script1.txt  script2.txt
CPSC_355_S2019/Assignment2/: assign2a.asm  assign2b.asm  assign2c.asm  main.c  script.txt
CPSC_355_S2019/Assignment3/: assign3.asm  script.txt
CPSC_355_S2019/Assignment4/: assign4.asm  main.c  script.txt
CPSC_355_S2019/Assignment5/: a5a.asm  a5aMain.c  a5aMain_original.c  a5b.asm  input.txt  main.c  output.txt  script1.txt  script2.txt
CPSC_355_S2020_Project/: README.md  mygame.asm  mygame_part1.c
CPSC_359_W2020/: README.md
CPSC_359_W2020/Assignment_1/: assign1.circ
CPSC_359_W2020/Assignment_2/: assign2.circ  assign2bonus.circ
CPSC_359_W2020/Assignment_4/: framebuffer.c  framebuffer.h  kernel8.img  main.c  snes_uart.c  snes_uart.h
CPSC_413_S2020/: README.md
CPSC_449_F2020/A1/: A1.hs
CPSC_449_F2020/A2/: A2.hs  A2.tex
CPSC_449_F2020/A3/: A3.hs  as3.tex
CPSC_449_F2020/A4/: A4.hs  as4.tex  myparsercode.hs
CPSC_449_F2020/A5/: A5.pl
CPSC_453_F2019/: README.md
CPSC_453_F2019/Assignment1_Core/: CMakeLists.txt  DrawModels.cpp  Geometry.cpp  Geometry.hpp  Miscellaneous.cpp  Miscellaneous.hpp  Program.cpp  README.md  RenderingEngine.cpp  RenderingEngine.hpp  Shader.cpp  main.cpp
CPSC_453_F2019/Assignment1_Core/shaders/: fragment_light.glsl  fragment_model.glsl  fragment_model_shading.glsl  vertex_light.glsl  vertex_model.glsl  vertex_model_shading.glsl
CPSC_453_F2019/Assignment3/: CMakeLists.txt  main.cpp
CPSC_453_F2019/Assignment3/Texture/: .bricks_red.tga.icloud  .ceiling__tiles.tga.icloud
CPSC_453_F2019/Assignment4/: CMakeLists.txt  README.md  glad.c  main.cpp
CPSC_453_F2019/Assignment4/middleware/glad/include/glad/: glad.h
CPSC_453_F2019/Assignment4/middleware/glm-0.9.9.6/glm/: glm.h
CPSC_453_F2019/Assignment4/shaders/: fragment.glsl  phong_fragment.glsl  phong_vertex.glsl  vertex.glsl
CPSC_457_S2020/: README.md
CPSC_471_F2019/: README.md  cpsc471_project_g3.sql
MATH_271_W2019/: README.md
SENG_300_W2020/: README.md
(+387 files in other folders)
